Fix layout problem in related documentation

--- a/wat/style/components/_layout.scss
+++ b/wat/style/components/_layout.scss
@@ -301,3 +301,13 @@ body {
 span.text {
     line-height: 1.4;
 }
+
+.related-doc {
+    display: inline-table;
+    
+    .related-doc-title {
+        font-weight: bold; 
+        margin-bottom: 10px; 
+        margin-top: 10px;
+    }
+}
