--- a/wat/style/style.css
+++ b/wat/style/style.css
@@ -1649,6 +1649,13 @@ select[name="role"] {
 span.text {
   line-height: 1.4; }
 
+.related-doc {
+  display: inline-table; }
+  .related-doc .related-doc-title {
+    font-weight: bold;
+    margin-bottom: 10px;
+    margin-top: 10px; }
+
 /********************************************************************
 *********************************************************************
 *********************************************************************
